<resources>
    <string name="app_name">MarathonSQLite</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="button">Button</string>
    <string name="add">Add</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
</resources>